# yt-automation

./: .env.example  .gitignore  HOW_TO_RUN.md  LEARNING.md  README.md  auth_grok.py  auth_whisk_v2.py  check_ffmpeg.py  check_upload.js  copy-grok-agent-test.py  copy-grok-agent.py  debug-parser-2.js  debug-parser-role.js  debug-parser.js  debug_browser_launch.py  debug_browser_temp.py  debug_ffmpeg_path.py  debug_hf_api.py  debug_hf_api_v3.py  debug_short.py  debug_sys_path.py  diag_launch.py  diagnose_launch.py  docker-compose.yml  documentation.md  f_clean_browser.py  hf_debug_results.txt  hf_debug_results_v2.txt  implementation_plan.md  kill_chrome.bat  list_gemini_models.py  old-grok-agent.py  package-lock.json  package.json  prisma_output.txt  reproduce_script_extraction.py  requirements.txt  reset_profile.py  serve.py  setup_ffmpeg.py  (+14 more)
.agent/workflows/: dev-setup.md
.turbo/daemon/: 3f08bf6d76571c3e-turbo.log.2026-02-07  55ca6bde795cee8f-turbo.log.2026-02-01  (+2 more)
apps/api/: Dockerfile  main.py  pyproject.toml
docs/: RUNBOOK.md  video_controls_plan.md  whisk_agent.md
prisma/: schema.prisma
scripts/: auth_whisk.py  diag_whisk_screenshot.py  inspect_fal.py  install_ffmpeg.ps1  integration_test_whisk.py  nuke_r2_videos.py  quick_verify_whisk.py  test_grok_manual.py  test_whisk_batch.py  test_whisk_hover.py
tests/: test_final_assembly.py  test_grok_fix.py  test_integration.py  test_music_gen.py  test_music_workflow.py  test_prompt_builder.py  test_user_json.py  test_youtube_enhanced.py  verify_4k_upscale.py  verify_assembly_features.py  verify_json_flow.py
(+46 files in other folders)
