[project]
name = "video-factory-api"
version = "0.1.0"
description = "AI Video Factory - FastAPI Orchestrator"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # AI & ML
    "httpx>=0.26.0",
    
    # Browser Automation
    "playwright>=1.41.0",
    "playwright-stealth>=1.0.6",
    
    # Cloud Storage
    "boto3>=1.34.0",
    
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "prisma>=0.11.0",
    
    # Video & Audio
    "ffmpeg-python>=0.2.0",
    "edge-tts>=6.1.9",
    "pydub>=0.25.1",
    
    # Subtitles & Images
    "pysrt>=1.1.2",
    "Pillow>=10.2.0",
    
    # YouTube
    "google-api-python-client>=2.114.0",
    "google-auth-oauthlib>=1.2.0",
    
    # Background Jobs
    "inngest>=0.4.0",
    
    # Validation
    "pydantic>=2.6.0",
    "fal-client>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
